[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lotusmarket"
version = "0.1.0"
description = "Vietnamese Stock Market Toolkit"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["pandas>=1.5", "numpy>=1.24"]

[project.optional-dependencies]
fetchers = ["httpx>=0.24"]
all = ["httpx>=0.24"]

[tool.pytest.ini_options]
testpaths = ["tests"]
