[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lotusmarket"
version = "0.1.2"
description = "Vietnamese Stock Market Toolkit — real-time quotes, technical analysis, sentiment, money flow signals for HOSE/HNX stocks"
license = "MIT"
readme = {file = "../README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
authors = [{name = "Dat Duc Nguyen Huu"}]
keywords = ["vietnam", "stock", "market", "trading", "technical-analysis", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["pandas>=1.5", "numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/ducnhd/lotusmarket"
Repository = "https://github.com/ducnhd/lotusmarket"
Issues = "https://github.com/ducnhd/lotusmarket/issues"

[project.optional-dependencies]
fetchers = ["httpx>=0.24"]
all = ["httpx>=0.24"]

[tool.pytest.ini_options]
testpaths = ["tests"]
